<resources>
    <string name="app_name">BitStepTest</string>

    <!--// name Activity-->
    <string name="register_activity">Регистрация</string>

    <string name="no_internet">Нет интернет соединения</string>
    <string name="login">Логин</string>
    <string name="log_in">Вход</string>
    <string name="text_for_login">Данные для входа</string>
    <string name="user_data">Личные данные</string>
    <string name="password">Пароль</string>
    <string name="email_incorrect">Введите правильно T-Mail</string>
    <string name="password_rules">Введите правильно пароль</string>
    <string name="password_confirmed">Пароли не совпадают</string>
    <string name="organisation_rules">Заполните поле Организация</string>
    <string name="locale_rules">Заполните поле Адресс</string>
    <string name="phone_rules">Введите правильно телефон</string>
    <string name="site_rules">Введите правильно сайт</string>

    <string name="text_sign_up">
        <![CDATA[
        Увас еще нет аккаунта? <b>Зарегистрироваться</b>
     ]]>
    </string>
    <string name="or_login_fb">Или войдите через</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="email">Почта</string>
    <string name="name_organisation">Нвзвание организации</string>
    <string name="locale">Адрес</string>
    <string name="phone">Телефон</string>
    <string name="site">Сайт</string>
    <string name="confirm_password">Подтверждение пароля</string>
    <string name="from_save_file">Выберите источник</string>
    <string name="from_gallery">Галлерея</string>
    <string name="make_photo">Сделать фото</string>
    <string name="camera_error">Ошибка камеры</string>
    <string name="camera_gallery">Ошибка галлереи</string>
    <string name="camera_permission_denied">Камера не подтверждена</string>
    <string name="storagel_permission_denied">Чтение и запись памяти не подтверждено</string>
    <string name="permissions_not_granted">Разрешение не подтверждено</string>
    <string name="open_permissions_grant">Открыть разрешение</string>
    <string name="unkown_format">Неизвестный формат</string>
    <string name="profile">Профиль</string>
    <string name="about">О программе</string>
    <string name="дщпщге">Выход</string>
    <string name="text_test_task">
        Написать Android приложение, состоящее из 4-х активити.
\n1 Активити: Авторизация.
\n2 Активити: Регистрация.
\n3 Активити: Профиль.
\n4 Активити: О приложении.
\n**Примечание: Все ответы с сервера приходят в виде JSON.
\nСделать верстку согласно макетам которые приложены к заданию.
\n# Регистрация:
\n	Адресс - http://164.132.224.6/test/reg
\n	Параметры:
\n	email, password, company, address, phone, site, Картинка, Push токен.
\n	Сделать валидацию с помощью RegExp для следующих полей:
\n	- email
\n	- password (Условия: от 8 до 20 символов. Латинские буквы. Минимум одна цифра. Минимум одна заглавная буква)
\n	- phone (+380 00 000 00 00)
\n	- site
\n	В случае ошибки вывести Toast.
\n	*Прикрепление аватара обязательно. Аватар загружается на сервер и выдаётся при авторизации.
\n# Авторизация:
\n	Адресс - http://164.132.224.6/test/auth
\n	Параметры: email, password
\n	Сделать валидацию аналогичной регистрации.
\n	В случае ошибки вывести Toast.
\n    В случае успешной авторизации получить данные url картинки и сохранить картинку в кеш устройства, остальные данные подготовить для дальнейшего отображенияю
\n# При успешной регистрации.
\n	Вы получите пуш нотификацию. Вам нужно её обработать.
\n	При нажатии отобразить активити авторизации (1). После того как активити отобразится, Вывести текст (body) с нотификации в Toast.
\n    Активити не должно перезапускать приложение, либо запускаться поверх регистрации, либо уже открытой страницы авторизации.
\n# После успешной авторизации.
\n	Открыть активити профиля (3). Вывести картинку полученную при авторизации и заполнить остальные поля прочими полученными данными. При последующих авторизациях
\n    брать картинку с кеша.
\n    Поле "Почта" менять не можем - статический текст.
\n	Написать рандомайзер который будет заполнять случайным образом график. При свайпе, происходит генерация новых данных. При генерации данных записывать их в локальную БД (SQLite).
\n# Меню настроек (бургер).
\n	В списке вывести следующие элементы:
\n		О приложении - Переходим на активити с информацией о приложении (4), версией и автором.
\n		Выход - деавторизация. Переход на активити авторизации
\n
\n# По завершению работы создать готовый apk файл. Залить проект, вместе с apk файлом, на GitHub или другой ресурс, где можно будет просмотреть и скачать работу.</string>
    <string name="author">Автор - Александр Пунтусов</string>
    <string name="goal">Цель - 15 000 шагов</string>
    <string name="day">День</string>
    <string name="week">неделя</string>
    <string name="month">месяц</string>


</resources>
