<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg_login"
    android:orientation="vertical"
    android:padding="@dimen/_8dp">

    <View
        android:id="@+id/center_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/_4dp"
        android:layout_marginTop="@dimen/_4dp"/>


    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/center_view"
        android:background="@drawable/bg_white_grey"
        android:gravity="center"
        android:paddingBottom="@dimen/_8dp"
        android:paddingTop="@dimen/_8dp"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_body_data"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_16sp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_32sp"
        android:textStyle="italic"/>

    <LinearLayout
        android:id="@+id/ll_body_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/center_view"
        android:background="@drawable/bg_grey"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:paddingBottom="@dimen/_8dp"
            android:paddingTop="@dimen/_8dp"
            android:text="@string/text_for_login"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_16sp"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_1dp"
            android:layout_marginRight="@dimen/_1dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:hint="@string/login"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingBottom="@dimen/_8dp"
            android:paddingTop="@dimen/_8dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14sp"/>

        <CalendarView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:background="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_1dp"
            android:layout_marginRight="@dimen/_1dp"
            android:layout_marginBottom="@dimen/_1dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="@dimen/_8dp"
            android:paddingTop="@dimen/_8dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_16sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_login"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/_14sp"/>


    <TextView
        android:id="@+id/tv_from_fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_forgot_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_16dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/or_login_fb"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_16sp"/>

    <ImageView
        android:id="@+id/iv_fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_from_fb"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_8dp"
        android:background="@drawable/bg_gradient_blue"
        android:padding="@dimen/_8dp"
        android:src="@drawable/char_fb"/>


    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_gradient_blue"
        android:gravity="center"
        android:text="@string/text_sign_up"
        android:textColor="@android:color/white"/>


</RelativeLayout>